# mllm-persona-evaluation

./: .env.example  .gitignore  README.md  pyproject.toml
colab/: setup_colab_no_persona.ipynb
data/: baseline_distribution.csv  generate_demographics.py  unique_perceptions.json
docs/: 01_baseline_distribution_eda.md  02_convergence_analysis_profile.md  03_perceptsent_cv_agreement.md  05_rq1_boxplots_cosine.md  colab_no_persona_setup.md
figures/: table1_demographic_distribution.tex  table2_convergence_results.tex  table3_perceptsent_agreement_eval.tex
notebooks/: 01_baseline_distribution_eda.ipynb  02_convergence_analysis_profile.ipynb  03_perceptsent_cv_agreement.ipynb  05_rq1_boxplots_cosine.ipynb
outputs/: annotation_failures.jsonl  annotations_no_persona_no_think.jsonl  annotations_no_persona_think.jsonl
scripts/: generate_personas.py  kruskal_wallis_test.py  run_all_notebooks.sh  run_annotation.py  run_annotation_no_persona.py
src/annotator/: __init__.py  config.py  graph.py  pipeline.py  state.py
src/annotator/nodes/: __init__.py  annotator.py  assembler.py  image_loader.py
src/annotator/prompts/: __init__.py  vision.py
src/persona_generator/: __init__.py  config.py  graph.py  logging_config.py  pipeline.py  state.py
src/persona_generator/nodes/: __init__.py  compiler.py  evaluator.py  reflector.py  seeder.py  synthesizer.py
src/persona_generator/prompts/: __init__.py  backstory.py  compiler.py  reflection.py
src/utils/: __init__.py  agreement.py  baseline_eda.py  boxplots.py  common.py  convergence.py
