[project]
name = "mllm-persona-urban-sentiment"
version = "1.0.0"
description = "Persona-driven MLLM annotation of urban scene sentiment — UrbCom 2026"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "scikit-learn>=1.8.0",
    "nltk>=3.9.2",
    "sentence-transformers>=5.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/persona_generator", "src/annotator"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
]
